# Universe

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pymon  22.1.0  BUILD  CMakeLists.txt  DockerBuildEnv  Dockerfile  Doxyfile.in  LICENSE  MurmurHash.cc  NewSRP.cc  NewSRP.cpp  NewSRP.h  README.md  Run.ps1  SRP.cc  SRP.cpp  SRP.h  WORKSPACE  amazon.py  amzn.py  amzn_benchmark.py  benchmark.py  bolt_model_save  bolt_script.py  callback.py  callback_msmarco.py  clang-check.sh  clang-format.sh  compile_commands.json  conftest.py  contrastive_embedding_experiment.py  dataset_paths.toml  delete.ipynb  delete.txt  (+83 more)
auto_ml/tests/: BalancingSamplesSerializationTest.cc  CMakeLists.txt  ConfigParameterTests.cc  GraphTest.cc  QueryCandidateGeneratorTest.cc  TabularTransformationTests.cc
bolt/: CMakeLists.txt  README.md  bolt.cc  bolt.py  conv.cc  dlrm.cc
bolt/RayExperiments/: DistributedNetworkRayMultiNode.py  DistributedNetworkRaySingleMachine.py
bolt/benchmarks/: amazon670k.py  amazon_polarity.py  amzn670.py  amzn670_blade.py  birds.py  criteo.py  experiments.py  helpers.py  mnist.py  runner.py  test_datasets.py
bolt/configs/: amzn.cfg  amzn.toml  amzn_benchmarks.cfg  criteo_dlrm.toml  intent.toml  intent_dlrm.toml  mnist_dense.cfg  mnist_dense.toml  mnist_sh.cfg  mnist_sh.toml  mnist_sh_rc_test.cfg  mnist_so.cfg  mnist_so.toml
bolt/distributed/: CMakeLists.txt  DistributedSparseLayer.cc  DistributedSparseLayer.h
bolt/dlrm/: criteo.py  dlrm.py  intent.py
bolt/examples/: amzn670.py  mnist.py  tfmnist.py
bolt/experiments/: TryConv.cc  TryConv.py  conv.cc  mlm.cc  newconv.ipynb  tabular_classifier.py  tabular_with_udt.py
bolt/layers/: BoltVector.cc  BoltVector.h  CMakeLists.txt  EmbeddingLayer.cc  EmbeddingLayer.h  FullyConnectedLayer.cc  FullyConnectedLayer.h  Layer.cc  Layer.h  LayerConfig.h  LossFunctions.h
bolt/loss_functions/: LossFunctions.h
bolt/networks/: CMakeLists.txt  DLRM.cc  DLRM.h  FullyConnectedNetwork.cc  FullyConnectedNetwork.h  Network.cc  Network.h  ShallowMixer.cc  ShallowMixer.h  TwoTower.cc  TwoTower.h
bolt/python_bindings/: AutoClassifier.h  AutoClassifierBase.h  AutoClassifiers.h  BoltCompression.cc  BoltCompression.h  BoltGraphPython.cc  BoltGraphPython.cc.orig  BoltGraphPython.h  BoltNERPython.cc  BoltNERPython.h  BoltNNPython.cc  BoltNNPython.h  BoltNer.cc  BoltNer.h  BoltPython.cc  BoltPython.h  BoltPythonUtils.h  BoltSeismic.cc  BoltSeismic.h  BoltTextGeneration.cc  BoltTextGeneration.h  BoltTrainPython.cc  BoltTrainPython.h  BoltV2Compression.cc  BoltV2NNPython.cc  BoltV2NNPython.h  BoltV2Python.cc  BoltV2TrainPython.cc  BoltV2TrainPython.h  CallbacksPython.cc  CallbacksPython.h  ConversionUtils.cc  ConversionUtils.h  CtrlCCheck.h  DistributedCommunicationPython.cc  DistributedCommunicationPython.h  NumpyConversions.cc  NumpyConversions.h  Porting.cc  Porting.h  (+3 more)
bolt/python_tests/: create_svm.ipynb  ctrl_c_executable.py  dataset.py  delete.ipynb  download_datasets.py  format_svm  helpers.py  incorrect_version_model.bolt  multi_svm  runner.py  seismic_dataset_fixtures.py  test_bolt_dag_concat.py  test_bolt_dag_distributed.py  test_bolt_dag_get_layer.py  test_bolt_dag_input_gradients.py  test_bolt_dag_mnist.py  test_bolt_dag_save_load.py  test_bolt_dag_summary.py  test_bolt_dropout.py  test_bolt_losses.py  test_bolt_mnist.py  test_bolt_ner_model.py  test_bolt_save_load.py  test_bolt_sgd.py  test_bolt_v2_concatenate.py  test_bolt_v2_contrastive.py  test_bolt_v2_embedding.py  test_bolt_v2_embeddings.py  test_bolt_v2_l1_norm.py  test_bolt_v2_layer_norm.py  test_bolt_v2_learning_rate_scheduler.py  test_bolt_v2_metrics.py  test_bolt_v2_mnist.py  test_bolt_v2_multiple_trainers.py  test_bolt_v2_op_sharing.py  test_bolt_v2_robez.py  test_bolt_v2_save_load.py  test_bolt_v2_sum.py  test_bolt_v2_tanh.py  test_bolt_v2_tensor.py  (+85 more)
bolt/src/: CMakeLists.txt  Config.cc  Config.h  ConfigReader.cc  ConfigReader.h  DWTA.cc  DWTA.h  DataLoader.cc  DataLoader.h  EmbeddingLayer.cc  EmbeddingLayer.h  FullyConnectedLayer.cc  FullyConnectedLayer.h  HashTable.cc  HashTable.h  Layer.cc  Layer.h  Network.cc  Network.h  SparseLayer.cc  SparseLayer.h
bolt/tests/: ArchiveSerializationTests.cc  BeamSearchDecodingTests.cc  CMakeLists.txt  ComparativeLossTests.cc  ComputationGraphTests.cc  ComputationScheduleTests.cc  ConcatenateOpTests.cc  CosineLRScheduleTests.cc  DatasetUtils.h  DlrmAttentionTests.cc  EmbFcInferenceTests.cc  EmbeddingInferenceTests.cc  EmbeddingLayerTest.cc  FullyConnectedLayerTest.cc  FullyConnectedModelTests.cc  FullyConnectedOpTests.cc  InvalidModelTests.cc  Mocks.h  ModelOpScheduleTests.cc  ProtobufSerializationTests.cc  ReduceLROnPlateauTests.cc  RootCauseAnalysisTests.cc  SaveLoadTests.cc  SparseLayerTest.cc  SwitchOpTests.cc  TensorTests.cc  TestDatasetGenerators.h  TestUtils.h  TrainerTests.cc  UpdateSparsityTests.cc
bolt/tf_conversions/: bolt_to_tf.py  keras_dense_model.py  model_converter.py
bolt/utils/: CMakeLists.txt  ConfigReader.cc  ConfigReader.h  DataLoader.cc  DataLoader.h  ProgressBar.h
bolt_vector/tests/: BoltVectorLoadSaveTest.cc  BoltVectorNormTest.cc  BoltVectorTest.cc  BoltVectorTestUtils.h  CMakeLists.txt
compression/tests/: CMakeLists.txt  CompressedVectorTest.cc  CountSketchTest.cc  DefaultCompressedVectorTest.cc  DragonVectorTest.cc
data/tests/: CMakeLists.txt  ColumnMapIteratorTests.cc  CountTokensTest.cc  DataLoaderTest.cc  DeduplicateTokensTest.cc  EncodePositionTest.cc  ExplanationTests.cc  GraphTests.cc  MachMemorySerializationTest.cc  MockDataSource.h  NerRuleTests.cc  NerTagTests.cc  NerTagTrackerTests.cc  PermutationTest.cc  RecurrenceTest.cc  RegressionBinningTest.cc  StateSerializationTest.cc  TabularTests.cc  TensorConversionTest.cc  TensorConversionTests.cc  TextCompatTest.cc  UnrollSequenceTest.cc
dataset/tests/: AugmentationListTests.cc  AugmentationTests.cc  BatchProcessorTestUtils.h  BatchProcessorTests.cc  BlockBatchProcessorTests.cc  BlockTest.h  CMakeLists.txt  CategoricalBlockTests.cc  CategoricalMultiLabelTest.cc  MockBlock.h  (+45 more)
proto/: CMakeLists.txt  README.md
(+3690 files in other folders)
